k8s-jenkins-sonar/sonar/postgres.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar-postgres
spec:
  replicas: 1
  template:
    metadata:
      name: sonar-postgres
      labels:
        name: sonar-postgres
    spec:
      containers:
        - image: postgres
          name: sonar-postgres
          ports:
            - containerPort: 5432
              name: postgresport
          volumeMounts:
            - name: data-disk
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data-disk
          persistentVolumeClaim:
            claimName: localvolum-pvc
