k8s-jenkins-sonar/sonar/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sonar
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar
          servicePort: sonarport
